fix: correction icon mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -427,8 +427,8 @@ table caption {
     right: 2rem;
     background: var(--primary-color);
     color: var(--color-white);
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 2rem;
+    line-height: 2rem;
     width: 3rem;
     height: 3rem;
     text-align: center;
